--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<hr>
 
 		<div>			
-			<input class="bigInput" type="number" placeholder="Registrar consumo" onchange="registrarConsumo(this.value);" onfocusout="saveOnHistory(this.value);">
+			<input class="bigInput" type="number" placeholder="Registrar consumo" onchange="registrarConsumo(this.value)" onfocusout="saveOnHistory(this.value);">
 			
 			<!--
 			<input class="bigInput" type="number" placeholder="registrar ingreso"
