--- a/index.html
+++ b/index.html
@@ -7,20 +7,32 @@
 	</head>
 	<body>
 
-		<h1>Contable app by Romualdo</h1>
+		<h1><span  style="font-size: 34pt">¿Cuánto puedes gastar hoy?</span> By <a href="http://www.gamebite10.com/" target="_blank">Gamebite10</a></h1>
 		<div>
-			<input id="fondos" class="bigInput" type="number" placeholder="presupuesto inicial" onchange="setfondos(this.value);">
-			 pesos de presupuesto para administrar durante 
-			<input id="numDias" class="bigInput" type="number" placeholder="administrar durante..." onchange="setNumeroDiasPorAdministrar(this.value);">
+			<p>
+				<b>AYUDA:</b> Lo primero que tienes que hacer para conocer siempre cuanto puedes gastar hoy es contestar las siguientes dos preguntas. 
+			</p>
+			Tengo 
+			<input id="fondos" class="bigInput" type="number" placeholder="¿Cuánto dinero?" onchange="setfondos(this.value);">
+			
+			 para administrar durante
+			<input id="numDias" class="bigInput" type="number" placeholder="¿Cuántos días?" onchange="setNumeroDiasPorAdministrar(this.value);">
 			 dias			
+
+			<p>
+				<b>TIP:</b> Presiona Enter o Clicka afuera de los campos para poder ver los cambios.
+			</p><br>
 		</div>
 		<hr>
 		<div>
+			<p>
+				<b>AYUDA:</b> Registra aquí todo lo que gastes hoy. 
+			</p>
 			<input class="bigInput" type="number" placeholder="registrar consumo" onchange="registrarConsumo(this.value);">
-			
+			<!--
 			<input class="bigInput" type="number" placeholder="registrar ingreso"
-			onchange="registrarIngreso(this.value);">
-		</div>
+			onchange="registrarIngreso(this.value);">-->
+		</div><br>
 		<hr>
 		<div>
 			¿Cuanto deberia gastar hoy? <b><span class="bigText" id="cuantoGastar"></span>COP</b>
@@ -28,6 +40,10 @@
 		<div>
 			¿Cuantos dias faltan? <b><span class="bigText" id="cuantosDias"></span></b>
 		</div>
+		<hr>
+		<p><b>IMPORTANTE:</b> Esta aplicación es un producto aun en etapa de desarrollo temprano, muchos elementos pueden cambiar. Con tu ayuda podremos ir mejorándola día a día. Envíanos tus sugerencias y comentarios a través de alguna de las siguientes redes.</p>
+		<a href="https://www.facebook.com/gamebite10/" target="_blank"><img src="https://www.facebookbrand.com/img/fb-art.jpg"></a>
+		<a href="https://twitter.com/gamebite10" target="_blank"><img src="http://www.gmkfreelogos.com/logos/T/img/twitter-logo.gif"></a>
 		<script type="text/javascript" src="scripts/main.js"></script>
 	</body>
 </html>
