--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
 		</ul>
 		-->
 		<script type="text/javascript" src="scripts/monetizacion.js"></script>
-		<script type="text/javascript" src="scripts/main.js"></script>		
+		<script type="text/javascript" src="scripts/main.js"></script>
+
+		<!-- Clicky analitycs -->
+		<a title="Real Time Web Analytics" href="http://clicky.com/100978050"><img alt="Real Time Web Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>		
+		<script src="//static.getclicky.com/js" type="text/javascript"></script>
+		<script type="text/javascript">try{ clicky.init(100978050); }catch(e){}</script>
+		<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100978050ns.gif" /></p></noscript>
+		<!-- END clicky analitycs -->		
 	</body>
 </html>
