--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 
-		<h1><span  style="font-size: 34pt">¿Cuánto puedes gastar hoy?</span> By <a href="http://www.gamebite10.com/" target="_blank">Gamebite10</a></h1>
+		<h1><span  style="font-size: 34pt">¿Cuánto puedes gastar hoy?</span> Vaya, <a href="https://goo.gl/forms/CmrVv3T4KTX37hi12" target="_blank">realmente me interesa</a></h1>
 		<div>
 			<p>
 				<b>AYUDA:</b> Lo primero que tienes que hacer para conocer siempre cuanto puedes gastar hoy es contestar las siguientes dos preguntas. 
@@ -58,15 +58,22 @@
 		<input type="button" value="Borrar historial" onclick="resetHistorial()" ></input>
 		<ul id="historialGastos">
 		</ul>
-		-->
-		<script type="text/javascript" src="scripts/monetizacion.js"></script>
-		<script type="text/javascript" src="scripts/main.js"></script>
+		-->		
 
-		<!-- Clicky analitycs -->
-		<a title="Real Time Web Analytics" href="http://clicky.com/100978050"><img alt="Real Time Web Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>		
-		<script src="//static.getclicky.com/js" type="text/javascript"></script>
-		<script type="text/javascript">try{ clicky.init(100978050); }catch(e){}</script>
-		<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100978050ns.gif" /></p></noscript>
-		<!-- END clicky analitycs -->		
+		<!-- Google analitycs -->
+		<!--
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-70407066-3', 'auto');
+		  ga('send', 'pageview');
+		</script>-->
+		<!-- END Google analitycs -->
+
+		<script type="text/javascript" src="scripts/metricas.js"></script>
+		<script type="text/javascript" src="scripts/main.js"></script>		
 	</body>
 </html>
