--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 
 		<hr>
 		<div>
-			<b>TIP:</b> Si esta es la primera vez que abres la app el día de hoy toma nota del valor que te aparece abajo e intenta no gastar más de eso en el día, ten en cuenta que cuando registras un gasto se actualizara el valor pero no quiere decir que puedas seguir gastando indefinidamente (estamos trabajando en mejorar esto)
-			<br><br>
+			<b>TIP:</b> Ten en cuenta que este valor se actualiza una vez introducido algun gasto.
+			<br>
+			<br>
 			¿Cuanto deberia gastar hoy? <b><span class="bigText" id="cuantoGastar"></span>COP</b>
 			<br>
 			<br>
@@ -61,7 +62,7 @@
 		-->		
 
 		<!-- Google analitycs -->
-		<!--
+		
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -70,10 +71,10 @@
 
 		  ga('create', 'UA-70407066-3', 'auto');
 		  ga('send', 'pageview');
-		</script>-->
+		</script>
 		<!-- END Google analitycs -->
 
-		<script type="text/javascript" src="scripts/metricas.js"></script>
-		<script type="text/javascript" src="scripts/main.js"></script>		
+		<!--<script type="text/javascript" src="scripts/metricas.js"></script>-->
+		<script type="text/javascript" src="scripts/main.js"></script>
 	</body>
 </html>
