Corregidos errores menores

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 		<hr>
 		<div>
-			<b>TIP:</b> Ten en cuenta que este valor se actualiza una vez introducido algun gasto.
+			<b>TIP:</b> Ten en cuenta que este valor se actualiza una vez introducido algún gasto.
 			<br>
 			<br>
 			¿Cuanto deberia gastar hoy? <b><span class="bigText" id="cuantoGastar"></span>COP</b>
@@ -62,7 +62,6 @@
 		-->		
 
 		<!-- Google analitycs -->
-		
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
