Cambiado el titulo
Cambiado el titulo de podria gastar hoy a deberia gastar hoy

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	</head>
 	<body>
 
-		<h1><span  style="font-size: 34pt">¿Cuánto puedes gastar hoy?</span> Vaya, <a href="https://goo.gl/forms/CmrVv3T4KTX37hi12" target="_blank">realmente me interesa</a></h1>
+		<h1><span  style="font-size: 34pt">¿Cuánto debería gastar hoy?</span></h1>
 		<div>
 			<p>
-				<b>AYUDA:</b> Lo primero que tienes que hacer para conocer siempre cuanto puedes gastar hoy es contestar las siguientes dos preguntas. 
+				<b>AYUDA:</b> Lo primero que tienes que hacer para conocer siempre cuanto debería  gastar hoy es contestar las siguientes dos preguntas. 
 			</p>
 			Tengo 
 			<input id="fondos" class="bigInput" type="number" placeholder="¿Cuánto dinero?" onchange="setfondos(this.value);">
@@ -50,6 +50,9 @@
 		<hr>
 
 		<br>
+
+		<h1><a href="https://goo.gl/forms/CmrVv3T4KTX37hi12" target="_blank"><span style="font-size: 34pt">Mantenme al tanto de las mejoras!!</span></a></h1>
+
 		<p><b>IMPORTANTE:</b> Esta aplicación es un producto aun en etapa de desarrollo temprano, muchos elementos pueden cambiar. Con tu ayuda podremos ir mejorándola día a día. Envíanos tus sugerencias y comentarios a través de alguna de las siguientes redes.</p>
 		<a href="https://www.facebook.com/gamebite10/" target="_blank"><img src="https://www.facebookbrand.com/img/fb-art.jpg"></a>
 		<a href="https://twitter.com/gamebite10" target="_blank"><img src="http://www.gmkfreelogos.com/logos/T/img/twitter-logo.gif"></a>
