--- a/index.html
+++ b/index.html
@@ -2,30 +2,83 @@
 <html>
 	<head>
 		<title>Contable App</title>
-		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<!--<link rel="stylesheet" type="text/css" href="css/main.css">-->
 		<meta charset="utf-8">
+
+		<!-- bootstrap -->
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 	</head>
 	<body>
 
-		<h1><span  style="font-size: 34pt">¿Cuánto debería gastar hoy?</span></h1>
-		<div>
+		<div class="container">
+
+			<h1>¿Cuánto debería gastar hoy?</h1>
+		
+			<h2>
+				Dinero disponible
+			</h2>
+			<h4>
+				Primero vamos a calcular cuanto dinero tienes disponible en este momento.
+			</h4>
+
+			<form class="form-inline">
+				<div class="form-group">
+					<label class="sr-only" for="exampleInputAmount">
+						Amount (in dollars)
+					</label>
+					<div class="input-group">
+					<div class="input-group-addon">COP</div>
+
+					<input type="number" 
+					class="form-control" 
+					id="fondos" 
+					placeholder="¿Cuánto dinero?">
+
+					<div class="input-group-addon">.00</div>
+					</div>
+				</div>
+				<button type="submit" class="btn btn-primary">Agregar</button>
+			</form>	
+<!--
+			<form class="form-horizontal" role="form">
+				<div class="form-group">
+					<label class="control-label col-sm-2" for="fondos">
+						Mi presupuesto es de:
+					</label>
+					<div class="col-sm-10">
+						<input type="number" class="form-control" 
+						id="fondos" placeholder="¿Cuánto dinero?" 
+						onchange="setfondos(this.value);">
+					</div>
+				</div>
+			</form>-->
+<!--
+			<input id="fondos" class="bigInput" type="number" 
+			placeholder="¿Cuánto dinero?" onchange="setfondos(this.value);">
+-->
+			<br>
+			
+			<hr>
+
 			<p>
 				<b>AYUDA:</b> Lo primero que tienes que hacer para conocer siempre cuanto debería  gastar hoy es contestar las siguientes dos preguntas. 
 			</p>
-			Tengo 
-			<input id="fondos" class="bigInput" type="number" placeholder="¿Cuánto dinero?" onchange="setfondos(this.value);">
-			
-			 para administrar durante
+
+			para administrar durante
 			<input id="numDias" class="bigInput" type="number" placeholder="¿Cuántos días?" onchange="setNumeroDiasPorAdministrar(this.value);">
 			 dias			
 
 			<p>
 				<b>TIP:</b> Presiona Enter o Clicka afuera de los campos para poder ver los cambios.
-			</p><br>
-		</div>
-		
-		<hr>
-		<div>
+			</p>
+
+			<br>
+			
+			<hr>
+
 			<p>
 				<b>AYUDA:</b> Registra aquí todo lo que gastes hoy.				
 			</p>
@@ -33,29 +86,34 @@
 			<!--
 			<input class="bigInput" type="number" placeholder="registrar ingreso"
 			onchange="registrarIngreso(this.value);">-->
-		</div><br>
 
-		<hr>
-		<div>
+			<br>
+
+			<hr>
+
 			<b>TIP:</b> Ten en cuenta que este valor se actualiza una vez introducido algún gasto.
 			<br>
 			<br>
 			¿Cuanto deberia gastar hoy? <b><span class="bigText" id="cuantoGastar"></span>COP</b>
 			<br>
 			<br>
-		</div>
-		<div>
+
 			¿Cuantos dias faltan? <b><span class="bigText" id="cuantosDias"></span></b>
+
+			<hr>
+
+			<br>
+
+			<h1><a href="https://goo.gl/forms/CmrVv3T4KTX37hi12" target="_blank"><span style="font-size: 34pt">Mantenme al tanto de las mejoras!!</span></a></h1>
+
+			<p><b>IMPORTANTE:</b> Esta aplicación es un producto aun en etapa de desarrollo temprano, muchos elementos pueden cambiar. Con tu ayuda podremos ir mejorándola día a día. Envíanos tus sugerencias y comentarios a través de alguna de las siguientes redes.</p>
+			<a href="https://www.facebook.com/gamebite10/" target="_blank"><img src="https://www.facebookbrand.com/img/fb-art.jpg"></a>
+			<a href="https://twitter.com/gamebite10" target="_blank"><img src="http://www.gmkfreelogos.com/logos/T/img/twitter-logo.gif"></a>
+
 		</div>
-		<hr>
 
-		<br>
+		
 
-		<h1><a href="https://goo.gl/forms/CmrVv3T4KTX37hi12" target="_blank"><span style="font-size: 34pt">Mantenme al tanto de las mejoras!!</span></a></h1>
-
-		<p><b>IMPORTANTE:</b> Esta aplicación es un producto aun en etapa de desarrollo temprano, muchos elementos pueden cambiar. Con tu ayuda podremos ir mejorándola día a día. Envíanos tus sugerencias y comentarios a través de alguna de las siguientes redes.</p>
-		<a href="https://www.facebook.com/gamebite10/" target="_blank"><img src="https://www.facebookbrand.com/img/fb-art.jpg"></a>
-		<a href="https://twitter.com/gamebite10" target="_blank"><img src="http://www.gmkfreelogos.com/logos/T/img/twitter-logo.gif"></a>
 <!--
 		<hr>
 		<h1>Historial de gastos</h1>
