Botones ya no recargan la pagina
En el anterior commit no se lograba solucionar este problema, en esta version los botones ya no recargan la pagina

--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
 							<strong>Dias</strong>
 						</div>						
 					</div>
-					<button type="submit" 
-					class="btn-lg btn-primary"
-					onclick="preventDefault();">Calcular</button>
+					<button type="button" class="btn-lg btn-primary">Calcular</button>
 				</div>
 			</form>
 
@@ -108,7 +106,7 @@
 					placeholder="Registrar consumo"
 					onchange="registrarConsumo(this.value);">
 				</div>
-				<button type="submit" 
+				<button type="button" 
 				class="btn-lg btn-danger"
 				onclick="preventDefault();">Registrar</button>
 			</form>
