--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 	<head>
 		<title>Contable App</title>
-		<!--<link rel="stylesheet" type="text/css" href="css/main.css">-->
 		<meta charset="utf-8">
 
 		<!-- bootstrap -->
@@ -10,19 +9,22 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-		<!-- Google analitycs -->
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		<!-- boostrap select -->
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/css/bootstrap-select.min.css">
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/js/bootstrap-select.min.js"></script>
 
-		  ga('create', 'UA-70407066-3', 'auto');
-		  ga('send', 'pageview');
-		</script>
+		<!-- AngularJS -->
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+		<!-- AngularJS Route module -->
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
+
+		<!-- Google analitycs -->
+		
 		<!-- END Google analitycs -->
 
-		<script type="text/javascript">
+		<!-- <script type="text/javascript">
 			function gaHitEvent(category, action, label) {
 				ga('send', {
 				  hitType: 'event',
@@ -32,147 +34,22 @@
 				});
 			}
 		</script>
-
+ -->
 	</head>
-	<body>
+	<body ng-app="ContaDiario">
 
-		<div class="container">
-
-			<h1>¿Cuánto debería gastar hoy?</h1>
-		
-			<h2>
-				Dinero disponible
-				<small>
-					Calculemos tu presupuesto
-				</small>
-			</h2>
-
-			<br>
-
-			<div class="alert alert-warning">
-				<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-				<strong>AYUDA: </strong> Lo primero que debes hacer para conocer cuánto debes gastar hoy es contestar las siguientes dos preguntas.
-			</div>
-
-			<form class="form-inline" role="form">
-				<div class="form-group">
-					<div class="input-group">
-						<input type="number" 
-						class="form-control input-lg" 
-						id="fondos"
-						placeholder="¿Mi presupuesto es de?"
-						onchange="setfondos(this.value);">
-						<div class="input-group-addon">
-							<strong>Pesos</strong>
-						</div>						
-					</div>
-					<div class="input-group">
-						<input type="number" 
-						class="form-control input-lg" 
-						id="numDias"
-						placeholder="¿Para administrar durante?"
-						onchange="setNumeroDiasPorAdministrar(this.value);">
-						<div class="input-group-addon">
-							<strong>Dias</strong>
-						</div>						
-					</div>
-					<button type="button" class="btn-lg btn-primary">Calcular</button>
-				</div>
-			</form>
-
-			<br>
-
-			<div class="alert alert-info">
-				<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-				<strong>Tip: </strong> Presiona Enter o Clicka afuera de los campos para poder ver los cambios.
-			</div>
-
-			<hr>			
-
-			<h2>¿Cuánto dinero he gastado hoy?</h2>
-			
-			<br>
-
-			<div class="alert alert-warning">
-				<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-				<strong>AYUDA: </strong> Registra aquí todo lo que vayas gastando hoy.	 
-			</div>
-
-			<form class="form-inline" role="form">
-				<div class="form-group">
-					<input type="number" 
-					class="form-control input-lg" 
-					id="email"
-					placeholder="Registrar consumo"
-					onchange="registrarConsumo(this.value);">
-				</div>
-				<button type="button" 
-				class="btn-lg btn-danger"
-				onclick="preventDefault();">Registrar</button>
-			</form>
-<!--
-			<p>
-				<b>AYUDA:</b> Registra aquí todo lo que vayas gastando hoy.
-			</p>
-			<input class="bigInput" type="number" placeholder="Registrar consumo" onchange="registrarConsumo(this.value);">-->
-			<!--
-			<input class="bigInput" type="number" placeholder="registrar ingreso"
-			onchange="registrarIngreso(this.value);">-->
-
-			<br>
-
-			<hr>
-
-			<div class="alert alert-danger">
-				<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-				<strong>RECUERDA: </strong> este valor se actualiza una vez introducido algún gasto.
-			</div>
-
-			<div class="row">
-				<div class="col-xs-6 well">
-					<h3>¿Cuanto deberia gastar hoy?</h3>
-					<h1>
-						<strong>
-							<span id="cuantoGastar"></span>COP
-						</strong>
-					</h1>				
-				</div>
-				<div class="col-xs-6 well">
-					<h3>¿Cuantos dias faltan?</h3>
-					<h1>
-						<strong>
-							<span id="cuantosDias"></span> Días
-						</strong>
-					</h1>
-				</div>
-			</div>
-
-			<hr>
-
-			<h1><a href="https://goo.gl/forms/CmrVv3T4KTX37hi12" target="_blank" onclick="gaHitEvent('social', 'subscribe', 'El usuario abrio el link para subscribirse al newsletter')"><span style="font-size: 34pt">Mantenme al tanto de las mejoras!!</span></a></h1>
-
-			<p><b>IMPORTANTE:</b> Esta aplicación es un producto aun en etapa de desarrollo temprano, muchos elementos pueden cambiar. Con tu ayuda podremos ir mejorándola día a día. Envíanos tus sugerencias y comentarios a través de alguna de las siguientes redes.</p>
-			<div class="row">
-				<div class="col-xs-6">
-					<a href="https://www.facebook.com/gamebite10/" onclick="gaHitEvent('social', 'facebook', 'El usuario dio click en la red social de facebook')" target="_blank"><img src="https://www.facebookbrand.com/img/fb-art.jpg"></a>
-				</div>
-				<div class="col-xs-6">
-					<a href="https://twitter.com/gamebite10" onclick="gaHitEvent('social', 'twitter', 'El usuario dio click en la red social de twitter')" target="_blank"><img src="http://www.gmkfreelogos.com/logos/T/img/twitter-logo.gif"></a>
-				</div>
-			</div>
+		<div class="container" ng-view>
 		</div>
 
-		
 
-<!--
-		<hr>
-		<h1>Historial de gastos</h1>
-		<input type="button" value="Borrar historial" onclick="resetHistorial()" ></input>
-		<ul id="historialGastos">
-		</ul>
-		-->	
+		<!-- Angular application -->			
+		<script type="text/javascript" src="app/app.modules.js"></script>
+		<script type="text/javascript" src="app/app.routes.js"></script>
+
+		<!-- Controllers -->
+		<script type="text/javascript" src="app/components/presupuestoDiario/presupuestoDiario.controller.js"></script>		
 
 		<!--<script type="text/javascript" src="scripts/metricas.js"></script>-->
-		<script type="text/javascript" src="scripts/main.js"></script>
+		<!-- <script type="text/javascript" src="scripts/main.js"></script> -->
 	</body>
 </html>
